--- a/bingo/bingo.csproj
+++ b/bingo/bingo.csproj
@@ -139,6 +139,10 @@
     <Compile Include="Migrations\201602231929172_Initial.Designer.cs">
       <DependentUpon>201602231929172_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602240153593_Update.cs" />
+    <Compile Include="Migrations\201602240153593_Update.Designer.cs">
+      <DependentUpon>201602240153593_Update.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\GameCardState.cs" />
     <Compile Include="Models\Cell.cs" />
@@ -167,6 +171,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201602231929172_Initial.resx">
       <DependentUpon>201602231929172_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602240153593_Update.resx">
+      <DependentUpon>201602240153593_Update.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
