--- a/bingo/bingo.csproj
+++ b/bingo/bingo.csproj
@@ -143,10 +143,6 @@
     <Compile Include="Migrations\201602240153593_Update.Designer.cs">
       <DependentUpon>201602240153593_Update.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602242130514_BetterRelations.cs" />
-    <Compile Include="Migrations\201602242130514_BetterRelations.Designer.cs">
-      <DependentUpon>201602242130514_BetterRelations.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\GameCardState.cs" />
@@ -180,9 +176,9 @@
     <EmbeddedResource Include="Migrations\201602240153593_Update.resx">
       <DependentUpon>201602240153593_Update.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602242130514_BetterRelations.resx">
-      <DependentUpon>201602242130514_BetterRelations.cs</DependentUpon>
-    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
